<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Restaurant</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_review_criteria">Enter review criteria</string>

    <string-array name="cuisines">
        <item>ANY</item>
        <item>American</item>
        <item>Barbeque</item>
        <item>Chinese</item>
        <item>French</item>
        <item>German</item>
        <item>Indian</item>
        <item>Italian</item>
        <item>Mexican</item>
        <item>Thai</item>
        <item>Vegetarian</item>
        <item>Kosher</item>
    </string-array>

    <string name="location_title">Location (City,ST)</string>
    <string name="cuisine_title">Cuisine:</string>
    <string name="get_reviews">Get Reviews</string>
    <string name="menu_get_reviews">Get Reviews</string>
    <string name="menu_web_review">Get full review</string>
    <string name="menu_map_review">Map location</string>
    <string name="menu_call_review">Call restaurant</string>
    <string name="menu_change_criteria">Change review criteria</string>
    <string name="menu_get_next_page">Get next page of results</string>
    <string name="alert_label">警告</string>
    <string name="location_not_supplied_message">没有输入相应地址！</string>
    <string name="title_activity_review_list">ReviewList</string>
    <string name="title_activity_review_detail">ReviewDetail</string>
    <string name="rating_label">Rating:</string>
    <string name="review_label">Review:</string>
    <string name="location_label">Location:</string>
    <string name="phone_label">Phone:</string>

    <string name="no_link_message">No link.</string>
    <string name="no_location_message">No location.</string>
    <string name="no_phone_message">No phone.</string>
    
</resources>