<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ReviewCriteria" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_review_criteria"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/title_font_size" />

    <Spinner
        android:id="@+id/cuisine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/get_reviews_button"
        android:layout_below="@+id/location"
        android:layout_marginTop="32dp" />

    <EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="44dp"
        android:ems="10" />

    <TextView
        android:id="@+id/location_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/location"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="22dp"
        android:text="@string/location_title" />

    <TextView
        android:id="@+id/cuisine_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cuisine"
        android:layout_below="@+id/location"
        android:layout_marginTop="14dp"
        android:text="@string/cuisine_title" />

    <Button
        android:id="@+id/get_reviews_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/location"
        android:layout_below="@+id/cuisine"
        android:text="@string/get_reviews" />

</RelativeLayout>