<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:gravity="center_horizontal"
    android:padding="10dp" >

    <ImageView
        android:id="@+id/review_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp" android:contentDescription="Review Image"/>

    <TextView
        android:id="@+id/name_detail"
        style="@style/intro_blurb"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_image"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/rating_label_detail"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_detail"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/rating_label" />

    <TextView
        android:id="@+id/rating_detail"
        style="@style/view_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rating_label_detail"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/review_label_detail"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rating_detail"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/review_label" />

    <TextView
        android:id="@+id/review_detail"
        style="@style/view_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_label_detail"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/location_label_detail"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_detail"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/location_label" />

    <TextView
        android:id="@+id/location_detail"
        style="@style/view_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_label_detail"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/phone_label_detail"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_detail"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/phone_label" />

    <TextView
        android:id="@+id/phone_detail"
        style="@style/view_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_label_detail"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp" />

</RelativeLayout>